ghc (7.6.1.20121207-1) UNRELEASED; urgency=low

  * New upstream release (aka 7.6.1-rc).
    + Closes: #677096 (huge number of wakeups)
  * Remove debian/patches/armhf_llvm_abi, applied upstream, thanks to Shawn
    Landden for noticing (Closes: #695739)

 -- Joachim Breitner <nomeata@debian.org>  Mon, 10 Dec 2012 19:01:38 +0100

ghc (7.6.1-3) experimental; urgency=low

  * Bump standards version, no change
  * Change VCS fields back to regular repo
  * Build the runtime also in the thr_debug_p way, suggestion by Michał J.
    Gajda

 -- Joachim Breitner <nomeata@debian.org>  Tue, 04 Dec 2012 22:00:27 +0100

ghc (7.6.1-2) experimental; urgency=low

  * Do not Provide transformers, it is only used internally.
  * Ensure this is not used with unstable’s haskell-devscripts

 -- Joachim Breitner <nomeata@debian.org>  Mon, 08 Oct 2012 22:41:46 +0200

ghc (7.6.1-1) experimental; urgency=low

  * New upstream release
    Dropped patches, applied upstream:
     + Fix-GHCi-segfault-on-linux-powerpc
     + hurd-is-ELF
     + use-llvm-3.0
     + memcpy-ffi
     + fix-PPC-right-shift-bug
     + no-useless-time
     + fix-ppc-ghci-segfault
  * Configure the use of llc-3.0 and opt-3.0 via ./configure
  * Bump standards version

 -- Joachim Breitner <nomeata@debian.org>  Mon, 08 Oct 2012 15:48:21 +0200

ghc (7.4.2-2) experimental; urgency=low

  [ Erik de Castro Lopo ]
  * Add patch to fix GHCi segfault on startup on PowerPC (Closes: #631073).
  * Remove patch no_ghci_on_powerpc.

  [ Iain Lane ]
  * Update Vcs-* to point to experimental branch

 -- Erik de Castro Lopo <erikd@mega-nerd.com>  Mon,  6 Aug 2012 20:19:46 +1000

ghc (7.4.2-1) experimental; urgency=low

   * New upstream.
   * debian/patches/series
     - Remove patch fix-ARM-s-StgCRun-clobbered-register-list-for-both-A,
       fix-ARM-StgCRun-to-not-save-and-restore-r11-fp-regis and memcpy-ffi.patch
       (in upstream).
     - Refresh other patches.
