@@ -188,7 +188,12 @@ install-stamp: build-stamp
 
 	# Add haddock substvars
 	echo "haddock:Depends=haddock-interface-$$(debian/tmp/usr/bin/haddock --interface-version)" >> debian/ghc-doc.substvars
-	echo "haddock:Provides=haddock-interface-$$(debian/tmp/usr/bin/haddock --interface-version)" >> debian/ghc-haddock.substvars
+	# Hardcode that 22 supports 21, until http://trac.haskell.org/haddock/ticket/231 is fixed
+	if [ $$(debian/tmp/usr/bin/haddock --interface-version) -eq 22 ] ; then \
+	    echo "haddock:Provides=haddock-interface-21, haddock-interfaces-22" >> debian/ghc-haddock.substvars; \
+	    else \
+	    echo "haddock:Provides=haddock-interface-$$(debian/tmp/usr/bin/haddock --interface-version)" >> debian/ghc-haddock.substvars ;\
+	    fi
 
 ifeq (YES,$(BUILD_HADDOCK_DOCS))
 	mkdir -p debian/tmp/usr/lib/ghc-doc
