@@ -4,6 +4,8 @@ ghc (7.6.1.20121207-1) UNRELEASED; urgency=low
     + Closes: #677096 (huge number of wakeups)
   * Remove debian/patches/armhf_llvm_abi, applied upstream, thanks to Shawn
     Landden for noticing (Closes: #695739)
+  * Hardcode in debian/rules that haddock supportin interface version 22 also
+    supports interface version 21.
 
  -- Joachim Breitner <nomeata@debian.org>  Mon, 10 Dec 2012 19:01:38 +0100
 
